add delete view listings added